<resources>
    <string name="app_name">Поиск Фильмов</string>
    <string name="name_film_shining">Сияние</string>
    <string name="name_film_cloud_atlas">Облачный Атлас</string>
    <string name="details">Детали</string>
    <string name="description_shining">Писатель Джек Торренс (Джек Николсон) с женой и сыном Денни приезжает в отель Оверлок, расположенный на снежных вершинах Колорадо. Роскошный интерьер гостиницы, затерянной в белом одиночестве, нагромождение залов, симметричных коридоров, головоломка лабиринта. Так начинается фильм «Сияние» (1979 г.) по роману Стивена Кинга.</string>
    <string name="description_cloud_atlas">Фильм о том, как тесно переплетается прошлое и будущее, и что одно действие, даже незначительное, происшедшее в прошлом, может повлиять через поколения на судьбу людей совсем в другой стране, а то и во всем мире</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="invite">Дорогой друг, приглашаю тебя оценить мое приложение Search Films</string>
    <string name="like">Нравится</string>
    <string name="comment">Комментарий</string>
    <string name="exit">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="change_theme">Тема</string>
    <string name="inception">Начало</string>
    <string name="inception_description">"Кобб — талантливый вор, лучший из лучших в опасном искусстве извлечения: он крадет ценные секреты из глубин подсознания во время сна, когда человеческий разум наиболее уязвим. Редкие способности Кобба сделали его ценным игроком в привычном к предательству мире промышленного шпионажа, но они же превратили его в извечного беглеца и лишили всего, что он когда-либо любил. "</string>
    <string name="joker">Джокер</string>
    <string name="joker_description">Готэм, начало 1980-х годов. Комик Артур Флек живет с больной матерью, которая с детства учит его «ходить с улыбкой». Пытаясь нести в мир хорошее и дарить людям радость, Артур сталкивается с человеческой жестокостью и постепенно приходит к выводу, что этот мир получит от него не добрую улыбку, а ухмылку злодея Джокера.</string>
    <string name="ford">Ford против Ferrari</string>
    <string name="ford_description">Сюжет повествует о группе американских инженеров и дизайнеров. В 1960-х под руководством конструктора Кэрролла Шелби и при поддержке британского гонщика Кена Майлса они должны были с нуля сделать абсолютно новый спорткар, способный опередить Феррари — непобедимого чемпиона 24-часовой гонки на выносливость Ле-Ман.</string>
    <string name="maleficent">Малефисента</string>
    <string name="maleficent_description">Действие происходит через несколько лет после того, как Малефисента наложила злые чары на принцессу Аврору. Фильм рассказывает про сложную взаимосвязь между тёмной феей и будущей королевой, о новых союзниках и противниках в деле защиты волшебного леса и магических существах, которые в нем обитают.</string>
    <string name="green_book">Зелёная книга</string>
    <string name="green_book_description">Утонченный светский лев, богатый и талантливый музыкант нанимает в качестве водителя и телохранителя человека, который менее всего подходит для этой работы. Тони «Болтун» — вышибала, не умеющий держать рот на замке и пользоваться столовыми приборами, зато он хорошо работает кулаками. Это турне навсегда изменит жизнь обоих.</string>
    <string name="menuTheme">Тема</string>
    <string name="menuInviteFriends">Поделиться</string>
    <string name="menuLike">Избранное</string>
    <string name="image">Image</string>
    <string name="all_films">Фильмы</string>
</resources>
