<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/content_main"
    android:paddingLeft="10dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:src="@drawable/shining" />

    <TextView
        style="@style/SearchFilmTitle"
        android:id="@+id/name_shining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_film_shining"/>

    <Button
        android:id="@+id/button_shining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:src="@drawable/cloud_atlas" />

    <TextView
        style="@style/SearchFilmTitle"
        android:id="@+id/name_cloud_atlas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_film_cloud_atlas"/>

    <Button
        android:id="@+id/button_cloud_atlas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:drawableLeft="@drawable/ic_star_half_white_24dp"
        android:id="@+id/button_invite_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/invite_friend" />
    <Button
        android:id="@+id/button_change_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_brightness_4_black_24dp"
        android:text="@string/change_theme"/>
</LinearLayout>

</LinearLayout>