<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bottomNavigationBg">

    <TextView
        android:id="@+id/body_dialog"
        style="@style/SearchFilmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="?attr/textColor"
        android:layout_margin="20dp"
        android:padding="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/colorWhite"
            android:layout_margin="20dp"
            android:padding="20dp"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/colorWhite"
            android:layout_margin="20dp"
            android:padding="20dp"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

</LinearLayout>